[package]
name = "cargo-doctor"
description = "Checks if all links mentioned in cargo docs of a crate are healthy"
license = "Apache-2.0 OR MIT"
version = "0.1.2"
authors = ["dylan_DPC <dylan.dpc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Dylan-DPC/cargo-doctor"

[dependencies]
reqwest = "0.9"
failure = "0.1"
scraper = "0.7"
indexmap = "1.0"
cargo_metadata = "0.6"

[dependencies.clap]
version = "2"
default_features = false
