[package]
name = "cargo-doctor"
description = "Checks if all links mentioned in cargo docs of a crate are healthy"
license = "Apache-2.0 OR MIT"
version = "0.1.2"
authors = ["dylan_DPC <dylan.dpc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Dylan-DPC/cargo-doctor"

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
failure = "0.1.8"
scraper = "0.12.0"
indexmap = "1.7.0"
cargo_metadata = "0.14.1"

[dependencies.clap]
version = "2"
default_features = false
